[package]
name = "coldbox"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
bdk = { version = "0.23", default-features = false, features = ["all-keys"] }
rand = "0.8.5"
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

[lib]
doctest = false
