[package]
name = "coldbox"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
bdk = { version = "0.29", default-features = true, features = ["all-keys"] }
base64 = "^0.21"
rand = "0.8.5"
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

[lib]
doctest = false
